# strategy-codebot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.dev.yml  compose.e2e.yml  compose.yml  pyproject.toml  server_helpers.py
.github/workflows/: ci.yml  release-artifacts.yml
apps/web/: .dockerignore  .env.example  DESIGN.md  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json  vitest.config.ts
configs/: model-registry.example.yaml  policy-rules.yaml  source-registry.yaml  tool-registry.yaml
contracts/: backtest-ohlcv.json  chat-intent-registry.json  workflow-registry.json
docker/: entrypoint.sh  migrate.sh
docker/litellm/: config.yaml
docs/: AI_AGENT_LOG_TRACE.md  ARCHITECTURE.md  FEATURE_INTAKE.md  HARNESS.md  IMPROVEMENT_PROTOCOL.md  README.md  TEST_MATRIX.md  TOOL_REGISTRY.md  TRACE_SPEC.md
docs/agents/: critic-agent.md  harness-auditor.md  intake-agent.md  knowledge-curator.md  mql5-specialist.md  pine-specialist.md  risk-reviewer.md  trading-analyst.md  validator-agent.md
docs/decisions/: 0001-repository-harness-operating-model.md  0002-langgraph-litellm-default-stack.md  0003-pine-and-mql5-platform-boundaries.md  0008-strategy-codebot-repository-harness-operating-model.md  0009-langgraph-litellm-default-stack.md  0010-pine-and-mql5-platform-boundaries.md  0011-cli-first-phase-1-runtime.md  0012-phase-2-parallel-review-runtime.md  0013-python-native-runtime-harness.md  0014-proposal-first-knowledge-improvement.md  0015-cli-productization-github-artifacts.md  0016-production-ready-live-eval-harness.md  0017-model-registry-refresh-for-finance-evals.md  0018-cheap-router-model-mappings.md  0019-remove-9router-support.md  0020-multi-model-live-workflow.md  0021-agent-harness-observability-readiness.md  0023-model-combo-stability-matrix.md  (+7 more)
migrations/: env.py
schemas/: agent-run.schema.json  knowledge-diff.schema.json  knowledge-eval-report.schema.json  knowledge-index.schema.json  knowledge-proposal.schema.json  knowledge-snapshot.schema.json  parity-report.schema.json  review-report.schema.json  runtime-trace.schema.json  strategy-spec.schema.json  tool-contract.schema.json  tool-event.schema.json  validation-report.schema.json
scripts/: e2e-docker.sh  prod-live-backtest-smoke.sh  repair-backtest-indexes.py  sync-backtest-contracts.py  sync-chat-intent-registry.py  sync-workflow-registry.py
tests/: conftest.py  server_helpers.py  test_action_registry.py  test_agent_harness.py  test_chat_intent_registry_contract.py  test_cli.py  test_docker_deployment.py  test_evals.py  test_evaluator_optimizer.py  test_harness.py  test_harness_intelligence.py  test_knowledge.py  test_knowledge_base.py  test_knowledge_context.py  test_knowledge_loop.py  test_lightweight_models.py  test_live.py  test_model_matrix.py  test_nautilus.py  test_nautilus_paper_worker.py  test_openrouter_free.py  test_paths.py  test_pine.py  test_policy_engine.py  test_prompt_contracts.py  test_quality.py  test_review.py  test_route_health.py  test_runner.py  test_schema.py  test_server.py  test_server_agent_logging.py  test_server_agent_loop.py  test_server_backtest_chat_tools.py  test_server_bot_proposals.py  test_server_bot_tools.py  test_server_chat_worker.py  test_server_database.py  test_server_e2e.py  test_server_knowledge_learning.py  (+16 more)
(+340 files in other folders)
