[project]
name = "strategy-codebot"
version = "0.1.0"
description = "Harness-first CLI for trading strategy codebot MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "jsonschema>=4.22",
  "langgraph>=0.2",
  "litellm>=1.50",
  "pydantic>=2.8",
  "pytest>=8.2",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.scripts]
strategy-codebot = "strategy_codebot.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/strategy_codebot"]
