[project]
name = "strategy-codebot"
version = "0.1.0"
description = "Harness-first CLI for generating, validating, reviewing, and improving trading strategy code artifacts."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "Duc Minh Le" },
]
keywords = [
  "ai-agent",
  "trading",
  "pine-script",
  "mql5",
  "cli",
  "harness",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Utilities",
]
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "jsonschema>=4.22",
  "pydantic>=2.8",
  "psycopg[binary]>=3",
  "pyyaml>=6.0",
  "sqlalchemy>=2",
  "typer>=0.12",
  "redis>=5",
  "uvicorn>=0.30",
  "ccxt>=4.5.59",
]

[dependency-groups]
dev = [
  "httpx2>=0.28",
  "pytest>=8.2",
]

[project.optional-dependencies]
live = [
  "httpx>=0.27",
  "langgraph>=0.2",
  "litellm>=1.50",
]

[project.scripts]
strategy-codebot = "strategy_codebot.cli:main"

[project.urls]
Homepage = "https://github.com/ducminhle1904/strategy-codebot"
Repository = "https://github.com/ducminhle1904/strategy-codebot"
Issues = "https://github.com/ducminhle1904/strategy-codebot/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/strategy_codebot"]

[tool.hatch.build.targets.wheel.force-include]
"CHANGELOG.md" = "CHANGELOG.md"
"CONTRIBUTING.md" = "CONTRIBUTING.md"
"LICENSE" = "LICENSE"
"README.md" = "README.md"
"SECURITY.md" = "SECURITY.md"
".github/workflows" = ".github/workflows"
"configs" = "configs"
"docs" = "docs"
"examples" = "examples"
"pyproject.toml" = "pyproject.toml"
"schemas" = "schemas"
